# CSA-Direct-Construction

./: CMakeLists.txt  README.md
include/sdsl/: csa_alphabet_strategy.hpp  int_vector_buffer.hpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  csa  csa_hon.hpp  csa_hon_helper.hpp  main.cpp  misc  misc.cpp  my_int_vector.hpp  psi_hon.hpp  suffixSorting.cpp  suffixSorting.hpp
